test: 학습테스트 newInstance 메소드 변경